--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,11 @@ jobs:
         run: npm install -g web-ext
       - name: Run package
         run: npm run package
+      - name: Upload extension
+        uses: actions/upload-artifact@v4
+        with:
+          name: Libby-download-extension
+          path: dist/web-ext-artifacts/*
   automerge:
     runs-on: ubuntu-latest
     needs: [ test, build ]
